--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/eslint-parser": "^7.18.9",
     "@vitejs/plugin-vue": "^2.2.0",
+    "autoprefixer": "^10.4.8",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
@@ -24,6 +27,8 @@
     "eslint-plugin-vue": "^8.5.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.5",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-modules": "^4.3.1",
     "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "vite": "^2.8.0",
