--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.11",
     "vant": "^3.4.5",
     "vue": "^3.2.25",
     "vue-router": "4"
@@ -19,20 +20,24 @@
     "@babel/core": "^7.18.10",
     "@babel/eslint-parser": "^7.18.9",
     "@vitejs/plugin-vue": "^2.2.0",
+    "@vitejs/plugin-vue-jsx": "^2.0.0",
     "autoprefixer": "^10.4.8",
     "babel-eslint": "^10.1.0",
+    "consola": "^2.15.3",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "husky": "^7.0.4",
+    "less": "^4.1.3",
+    "less-loader": "4",
     "lint-staged": "^12.3.5",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-modules": "^4.3.1",
     "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "vite": "^2.8.0",
-    "vite-plugin-style-import": "1.4.1"
+    "vite-plugin-style-import": "^2.0.0"
   },
   "lint-staged": {
     "*.{js,vue,ts,jsx,tsx}": [
