--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.11",
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "dayjs": "^1.11.4",
+    "express": "^4.18.1",
+    "mysql": "^2.18.1",
     "vant": "^3.4.5",
     "vue": "^3.2.25",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/eslint-parser": "^7.18.9",
     "@vitejs/plugin-vue": "^2.2.0",
-    "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "@vitejs/plugin-vue-jsx": "1.3.10",
     "autoprefixer": "^10.4.8",
     "babel-eslint": "^10.1.0",
     "consola": "^2.15.3",
