--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "server": "node ./server/index.js"
   },
   "dependencies": {
+    "@vueup/vue-quill": "^1.0.0-beta.9",
     "ant-design-vue": "^3.2.11",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
@@ -20,7 +21,6 @@
     "mysql": "^2.18.1",
     "vant": "^3.4.5",
     "vue": "^3.2.25",
-    "vue-quill-editor": "^3.0.6",
     "vue-router": "4"
   },
   "devDependencies": {
