--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.4",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
+    "pinia": "^2.0.22",
     "vant": "^3.4.5",
     "vue": "^3.2.25",
     "vue-router": "4"
