--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "dayjs": "^1.11.4",
+    "excel-export": "^0.5.1",
     "express": "^4.18.1",
+    "js-file-download": "^0.4.12",
     "mysql": "^2.18.1",
     "pinia": "^2.0.22",
     "vant": "^3.4.5",
     "vue": "^3.2.25",
-    "vue-router": "4"
+    "vue-router": "4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
