--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "excel-export": "^0.5.1",
     "express": "^4.18.1",
     "js-file-download": "^0.4.12",
+    "js-xlsx": "^0.8.22",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.22",
     "vant": "^3.4.5",
     "vue": "^3.2.25",
