--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "autoprefixer": "^10.4.8",
     "babel-eslint": "^10.1.0",
     "consola": "^2.15.3",
+    "cross-env": "^7.0.3",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -48,11 +49,13 @@
     "less": "^4.1.3",
     "less-loader": "4",
     "lint-staged": "^12.3.5",
+    "mockjs": "^1.1.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-modules": "^4.3.1",
     "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "vite": "^2.8.0",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-style-import": "^2.0.0"
   },
   "lint-staged": {
