--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "dayjs": "^1.11.4",
+    "echarts": "^5.4.0",
     "excel-export": "^0.5.1",
     "express": "^4.18.1",
     "js-file-download": "^0.4.12",
