--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-file-download": "^0.4.12",
     "js-xlsx": "^0.8.22",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "nprogress": "^0.2.0",
