--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "vite": "^2.8.0",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-style-import": "^2.0.0"
   },
