--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint --ext .vue,.js ./",
     "lint:fix": "eslint --fix --ext .vue,.js ./",
     "prepare": "husky install",
-    "server": "node ./server/index.js"
+    "server": "node ./server/index.js",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@vueup/vue-quill": "^1.0.0-beta.9",
@@ -35,13 +37,17 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
+    "@babel/core": "^7.19.6",
     "@babel/eslint-parser": "^7.18.9",
+    "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vitejs/plugin-vue-jsx": "1.3.10",
+    "@vue/test-utils": "2.0.0-rc.17",
+    "@vue/vue3-jest": "27.0.0-alpha.3",
     "autoprefixer": "^10.4.8",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.2.1",
     "consola": "^2.15.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.10.0",
@@ -49,6 +55,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "husky": "^7.0.4",
+    "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.2.1",
     "less": "^4.1.3",
     "less-loader": "4",
     "lint-staged": "^12.3.5",
