--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "ant-design-vue": "^3.2.11",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.4",
     "echarts": "^5.4.0",
     "excel-export": "^0.5.1",
     "express": "^4.18.1",
+    "jquery": "^3.6.1",
     "js-file-download": "^0.4.12",
     "js-xlsx": "^0.8.22",
     "jsonwebtoken": "^8.5.1",
