--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vant": "^3.4.5",
     "vue": "^3.2.25",
     "vue-router": "4",
+    "vue-simple-uploader": "^0.7.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
