--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "echarts": "^5.4.0",
     "excel-export": "^0.5.1",
     "express": "^4.18.1",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.1",
     "js-file-download": "^0.4.12",
     "js-xlsx": "^0.8.22",
@@ -34,6 +35,7 @@
     "mysql": "^2.18.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.22",
+    "sign-canvas": "^1.1.4",
     "sortablejs": "^1.15.0",
     "vant": "^3.4.5",
     "vue": "^3.2.25",
